tests/dependancies/good/module1.rs


pub fn exec1() {
    print!("module1\n")
}