tests/dependancies/bad/missing_mod/main.rs
mod missing_module;

fn main() {
    print!("Should not work\n")
}